Website: Fix contrasts

--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -8,7 +8,7 @@
   --color-primary-light: #4b6ed4;
   --color-primary-dark: #1a3c8c;
 
-  --color-secondary: #cc9900;
+  --color-secondary: #664400;
   --color-secondary-light: #e6b800;
   --color-secondary-dark: #997300;
 
@@ -46,8 +46,8 @@
   --color-nav-mobile-text-active: #ffffff;
   --color-nav-mobile-text-current: #ffffff;
 
-  --color-header-logo: var(--color-primary);
-  --color-footer-logo: var(--color-primary);
+  --color-header-logo: #003884;
+  --color-footer-logo: var(--color-white);
 
   --text-h1: clamp(2rem, 5vw + 1rem, 4rem);
   --text-h2: clamp(1.5rem, 4vw + 0.5rem, 2.5rem);
@@ -93,7 +93,7 @@
     --color-primary: #3557c1;
     --color-primary-light: #4b6ed4;
     --color-primary-dark: #1a3c8c;
-    --color-secondary: #cc9900;
+    --color-secondary: #664400;
     --color-secondary-light: #e6b800;
     --color-secondary-dark: #997300;
     --color-accent: #1e3c8c;
@@ -124,8 +124,8 @@
     --color-nav-mobile-text-hover: #e6b800;
     --color-nav-mobile-text-active: #ffffff;
     --color-nav-mobile-text-current: #ffffff;
-    --color-header-logo: var(--color-primary);
-    --color-footer-logo: var(--color-primary);
+    --color-header-logo: #003884;
+    --color-footer-logo: var(--color-white);
   }
 
   [data-theme='poseidon'] {
